--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <properties>
         <version.capedwarf>3.0.0.Beta1</version.capedwarf>
         <!-- Deps -->
-        <version.org.wildfly>9.0.0.CR1</version.org.wildfly>
-        <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
-        <version.org.jboss.xnio>3.3.0.Final</version.org.jboss.xnio>
+        <version.org.wildfly>10.0.0.Alpha2</version.org.wildfly>
+        <version.org.wildfly.arquillian>1.0.0.CR1</version.org.wildfly.arquillian>
+        <version.org.jboss.xnio>3.3.1.Final</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>3.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>3.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>3.0.0-SNAPSHOT</version.org.jboss.capedwarf>
@@ -28,18 +28,18 @@
         <!-- GAE ARQ -->
         <version.arquillian.gae>1.0.0.Beta10</version.arquillian.gae>
         <!-- External deps -->
-        <version.com.google.appengine>1.9.20</version.com.google.appengine>
-        <version.com.google.appengine.managed>1.9.19</version.com.google.appengine.managed>
+        <version.com.google.appengine>1.9.21</version.com.google.appengine>
+        <version.com.google.appengine.managed>1.9.21</version.com.google.appengine.managed>
         <version.com.google.guava>18.0</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.httpcomponents>4.3.6</version.org.apache.httpcomponents>
         <version.org.apache.lucene>4.10.4</version.org.apache.lucene>
         <version.org.bouncycastle>1.50</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>5.1.2.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>5.2.0.Final</version.org.hibernate.search>
         <version.org.hibernate.hql>1.1.0.Final</version.org.hibernate.hql>
-        <version.org.jgroups>3.6.2.Final</version.org.jgroups>
-        <version.org.infinispan>7.1.1.Final</version.org.infinispan>
+        <version.org.jgroups>3.6.3.Final</version.org.jgroups>
+        <version.org.infinispan>7.2.2.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.2.2.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -61,7 +61,7 @@
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.junit>4.11</version.junit>
-        <version.arquillian>1.1.7.Final</version.arquillian>
+        <version.arquillian>1.1.8.Final</version.arquillian>
         <version.org.jboss.arquillian.graphene2>2.0.3.Final</version.org.jboss.arquillian.graphene2>
         <version.metainf>1.1</version.metainf>
         <!-- DataNucleus -->
